add auth_key to a user for test purposes

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,6 +1,7 @@
 liam:
   email: hokouri@gmail.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  authentication_token: token
 
 mother:
   email: mother@example.com
