--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,3 +11,4 @@ mother:
 miles:
   email: miles@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password')  %>
+  authentication_token: some_other_token
