--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,5 +1,5 @@
 liam:
-  email: hokouri@gmail.com
+  email: user@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 
 mother:
