--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,14 +1,14 @@
 liam:
   email: user@example.com
-  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  password_digest: <%= User.new.password = 'password' %>
   authentication_token: token
 
 mother:
   email: mother@example.com
-  encrypted_password: <%= User.new.send(:password_digest, 'password')  %>
+  password_digest: <%= User.new.password = 'password' %>
   authentication_token: mother_token
 
 miles:
   email: miles@example.com
-  encrypted_password: <%= User.new.send(:password_digest, 'password')  %>
+  password_digest: <%= User.new.password = 'password' %>
   authentication_token: some_other_token
